@@ -1,4 +1,4 @@
-# $Id: macros.in,v 1.34 1999/08/18 16:29:53 jbj Exp $
+# $Id: macros.in,v 1.35 1999/08/22 04:17:12 jbj Exp $
 #==============================================================================
 # Macro naming conventions (preliminary):
 #
@@ -103,6 +103,7 @@
 #%_gpg_path
 #%_httpport
 #%_httpproxy
+#%_install_langs
 #%_langpatt
 #%_netsharedpath
 #%packager
